# lox

./: .gitignore  Cargo.toml  README.md  README.org  flake.nix
.github/workflows/: ci.yaml
fixtures/assignments/: expected.txt
fixtures/basic_statements/: expected.txt
fixtures/basic_while/: code.lox
fixtures/closures/: code.lox
fixtures/if_false/: code.lox  expected.txt
fixtures/if_true/: expected.txt
fixtures/reassignment/: expected.txt
fixtures/return_stmt_basic/: expected.txt
lox_bytecode/: Cargo.toml
lox_bytecode/src/: function.rs  lib.rs
lox_compiler/: Cargo.toml
lox_compiler/src/: lib.rs
lox_compiler/tests/: snapshot.rs
lox_interpreter/: Cargo.toml
lox_interpreter/src/: builtins.rs  env.rs  interpreter.rs  lib.rs  value.rs
lox_interpreter/tests/: tests.rs  tree_walk.rs
lox_source/: Cargo.toml
lox_source/src/: lib.rs  source.rs
lox_value/: Cargo.toml
lox_value/src/: lib.rs  native.rs  number.rs  object.rs
lox_vm/: Cargo.toml
lox_vm/src/: lib.rs  native.rs
src/: builtins.rs  lib.rs  main.rs  resolver.rs  source.rs
src/ast/: ast_printer.rs  expr.rs  mod.rs  visitor.rs
src/compiler/: mod.rs
src/interpreter/: env.rs  interpreter.rs  mod.rs  resolver.rs  value.rs
src/lexer/: lexer.rs  mod.rs  scanner.rs  token.rs
src/parser/: mod.rs
src/tree_walk/: env.rs  error.rs  interpreter.rs  mod.rs  value.rs
src/vm/: bytecode.rs  mod.rs  opcode.rs
tests/: canonical.rs  golden.rs  tests.rs  tree_walk.rs
tests/fixtures/: builtin_call.lox  reassignment.lox
tests/snapshots/: golden__assignments.snap  (+15 more)
(+58 files in other folders)
