[package]
name = "lox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rlox"
path = "src/main.rs"

[dependencies]
miette = { version = "7.2", features = ["fancy"] }
rustyline = "14"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
lox_vm = { path = "./lox_vm" }
lox_compiler = { path = "./lox_compiler" }
lox_source = { path = "./lox_source" }
termcolor = "1.4.1"

[workspace]
members = [".", "lox_source", "lox_interpreter", "lox_vm" , "lox_bytecode", "lox_compiler", "lox_value"]

[dev-dependencies]
insta = { version = "1.42.2", features = ["yaml", "glob"] }
